# app_vukwm_bag_delivery

./: .gitignore  Home.py  README.md  generate_routes.py  main_app.py  pyproject.toml  routing_app.py  routing_job_selection.py  select_vehicles.py  test_aggrid_drag_drop.py  upload_file_geocode.py
app_vukwm_bag_delivery/: aggregates.py  download_s3_file.py  download_to_excel.py  generate_routes.py  geo_utils.py  google_geocode.py  hygese_solver.py  hygese_solver_examples.py  orsm_get_table.py  osrm.py  osrm_get_routes.py  osrm_tsp.py  process_excel.py  render_order_map.py  return_routes.py  return_session_staus.py  select_vehicles.py
app_vukwm_bag_delivery/dispatch_routes/: dispatch_upload.py  excel_download.py  format_assigned_jobs.py  route_sheet_cell_gen.py  route_sheet_gsheet_generation.py
app_vukwm_bag_delivery/generate_routes/presenters/: decode_solution.py  extract_high_level_summary.py  generate_matrix.py  generate_route_objects.py  process_input_data.py  return_routes.py  solve_vroom_instace.py
app_vukwm_bag_delivery/home/presenters/: load_input_data.py
app_vukwm_bag_delivery/presenters/: select_remove_stops.py
app_vukwm_bag_delivery/update_routes/: controls.py  create_routing_objects.py  interactive_map.py  notes.md  process_assigned_data.py  select_dataframe.py  update_routes_test_widget.py
app_vukwm_bag_delivery/util_presenters/: check_password.py  save_session.py
app_vukwm_bag_delivery/util_views/: return_session_status.py  side_bar_progress.py
app_vukwm_bag_delivery/view_routes/: generate_route_display.py  generate_route_gant.py  generate_route_map.py
app_vukwm_bag_delivery/views/: page_view_01_Review_Jobs_Data.py  page_view_Home.py  render_unassigned_stops_map.py  side_bar_progress.py  summarise_inputs.py
notebooks/: 00_ejwillemse_20221221_unassigned_stop_visualisation.ipynb  01_ejwillemse_20221221_assigned_stop_visualisation.ipynb  02_ejwillemse_20230114_date_error_inspections.ipynb  03_ejwillemse_20230115_create_route_sheet_research.ipynb  04_ejwillemse_20230330_test_session_state_saving.ipynb
pages/: 01_Review_Jobs_Data.py  02_Select_Vehicles.py  03_Generate_Routes.py  04_View_Routes.py  05_Update_Routes.py  06_Dispatch_Routes.py  07_Load_Previous_Session.py  BETA_plotly_events.py  BETA_plotly_maps.py
(+26 files in other folders)
