[tool.poetry]
name = "app-vukwm-bag-delivery"
version = "0.1.0"
description = ""
authors = ["ejwillemse <ejwillemse@gmail.com>"]
readme = "README.md"
packages = [{include = "app_vukwm_bag_delivery"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
watchdog = "^2.2.0"
pylint = "^2.15.8"
black = "^22.10.0"
openpyxl = "^3.0.10"
googlemaps = "^4.7.3"
toml = "^0.10.2"
pyxlsb = "^1.0.10"
XlsxWriter = "^3.0.3"
geopandas = "^0.12.1"
streamlit-aggrid = "^0.3.3"
hygese = "^0.0.0.8"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
keplergl = "^0.3.2"
leafmap = "^0.14.1"
streamlit-plotly-events = "^0.0.6"
pyvroom = "^0.0.14"
gspread = "^5.7.2"
google-api-python-client = "^2.72.0"
streamlit-plotly-mapboxevents = "^0.0.4"
boto3 = "^1.26.98"
boto = "^2.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
